--- a/install
+++ b/install
@@ -13,21 +13,21 @@ INSTALLED_INDEX="./.installed_packages"
 stowable="$(ls -d */ | grep -v _ | grep -v stow | tr -d /)"
 
 echo
-echo ">> Initializing .stowrc"
+echo "==> Initializing .stowrc"
 cp -vi ./stow/.stowrc.example ./stow/.stowrc
 sed -i "s|\$HOME|$HOME|" ./stow/.stowrc
 cat ./stow/.stowrc
 echo "stow" >> "$INSTALLED_INDEX_TMP"
 
 echo
-echo ">> Installing stow"
+echo "==> Installing stow"
 stow --verbose --target $HOME --ignore=.*.example stow
 
 for package in $stowable; do
   echo
-  read -r -p ">> Install $package? [y/n]" install
+  read -r -p "==> Install $package? [y/n]" install
   if [ "$install" == 'y' ]; then
-    echo ">> Installing $package"
+    echo "==> Installing $package"
     echo "$package" >> "$INSTALLED_INDEX_TMP"
     (
     cd $package
@@ -43,5 +43,5 @@ done
 mv -f "$INSTALLED_INDEX_TMP" "$INSTALLED_INDEX"
 
 echo
-echo ">> Installed these packages:"
+echo "==> Installed these packages:"
 cat "$INSTALLED_INDEX"
