--- a/install
+++ b/install
@@ -1,26 +1,45 @@
-#!/usr/bin/env bash
+#!/bin/bash
 
 set -e
-source _scripts/_helpers.sh
+DOTFILES_DIR="$(dirname $0)"
+source "$DOTFILES_DIR/_scripts/_helpers.sh"
 
-if [[ -n "$(which apt-get)" ]]; then
-  if _confirm "Run linux install scripts?"; then
-    _scripts/install-linux || _error "linux install failed"
+INSTALLED_INDEX_TMP="$(mktemp)"
+INSTALLED_INDEX="$DOTFILES_DIR/.installed_packages"
+
+stowable="$(ls -d */ | grep -v _ | grep -v stow | tr -d /)"
+
+cd "$DOTFILES_DIR"
+
+_info "Installing dotfile packages"
+
+_info "Initializing .stowrc"
+cp ./stow/.stowrc.example ./stow/.stowrc
+sed -i "s|\$HOME|$HOME|" ./stow/.stowrc
+cat ./stow/.stowrc
+echo "stow" >> "$INSTALLED_INDEX_TMP"
+
+_info "Installing stow"
+stow --target $HOME --ignore=.*.example stow
+
+for package in $stowable; do
+  if _confirm "Install $package?"; then
+    _info "Installing $package"
+    echo "$package" >> "$INSTALLED_INDEX_TMP"
+    (
+    cd $package
+    examples="$((ls -a | grep example) || echo)"
+    for example in $examples; do
+      cp -vn "$example" "$(echo $example | sed 's/.example//')"
+    done
+    )
+    stow $package
   fi
-elif [[ "$OSTYPE" == "darwin"* ]]; then
-  if _confirm "Run MacOS install scripts?"; then
-    _scripts/install-macos || _error "macos install failed"
-  fi
-fi
+done
 
-if _confirm "Install stow packages?"; then
-  _scripts/install-stow-packages || _error "stow packages failed"
-fi
+mv -f "$INSTALLED_INDEX_TMP" "$INSTALLED_INDEX"
 
-if ! _executable autojump; then
-  _scripts/install-autojump || _error "autojump install failed"
-fi
+_info "Installed these packages:"
+cat "$INSTALLED_INDEX"
 
-if _confirm "Install dotfiles dev dependencies?"; then
-  _scripts/install-dev || _error "Dotfiles dev deps install failed"
-fi
+_info "Completed dotfile packages install"
