--- a/install
+++ b/install
@@ -7,37 +7,41 @@ source "$DOTFILES_DIR/_scripts/_helpers.sh"
 INSTALLED_INDEX_TMP="$(mktemp)"
 INSTALLED_INDEX="$DOTFILES_DIR/.installed_packages"
 
-stowable="$(ls -d */ | grep -v _ | grep -v stow | tr -d /)"
+stowable="$(ls -d */ | grep -v _ | grep -v stow | grep -v shared | tr -d /)"
 
 cd "$DOTFILES_DIR"
 
-_info "Setting up XDG directories"
+install_package() {
+  local package=$1
+  (
+  cd "$package"
+  examples="$( (ls -a | grep example) || echo)"
+  for example in $examples; do
+    cp -vn "$example" "$(echo $example | sed 's/.example//')"
+  done
+  )
+  stow $package
+}
+
+_info "Setting up directories"
 [[ -z "$XDG_CONFIG_HOME" ]] && export XDG_CONFIG_HOME="$HOME/.config"
 [[ ! -d "$XDG_CONFIG_HOME" ]] && mkdir -vp "$XDG_CONFIG_HOME"
 [[ -z "$XDG_CACHE_HOME" ]] && export XDG_CACHE_HOME="$HOME/.cache"
 [[ ! -d "$XDG_CACHE_HOME" ]] && mkdir -vp "$XDG_CACHE_HOME"
 
-_info "Initializing .stowrc"
+_info "Initializing stow"
 cp ./stow/.stowrc.example ./stow/.stowrc
 sed -i "s|\$HOME|$HOME|" ./stow/.stowrc
 cat ./stow/.stowrc
 echo "stow" >> "$INSTALLED_INDEX_TMP"
-
-_info "Installing stow"
 stow --target $HOME --ignore=.*.example stow
+install_package 'shared'
 
 for package in $stowable; do
   if _confirm "Install $package?"; then
     _info "Installing $package"
     echo "$package" >> "$INSTALLED_INDEX_TMP"
-    (
-    cd $package
-    examples="$((ls -a | grep example) || echo)"
-    for example in $examples; do
-      cp -vn "$example" "$(echo $example | sed 's/.example//')"
-    done
-    )
-    stow $package
+    install_package $package
   fi
 done
 
