create directories on dotfiles install

--- a/install
+++ b/install
@@ -23,6 +23,12 @@ install_package() {
   stow $package
 }
 
+_info "Creating directories"
+mkdir -vp $HOME/.config
+mkdir -vp $HOME/bin
+mkdir -vp $HOME/lib
+mkdir -vp $HOME/.gnupg
+
 _info "Initializing stow"
 cp ./stow/.stowrc.example ./stow/.stowrc
 sed -i "s|\$HOME|$HOME|" ./stow/.stowrc
